force-app/main/default/objects/Monitoring_Type__c/Monitoring_Type__c.object-meta.xml
<CustomObject>
    <label>Monitoring Type</label>
    <nameField>
        <label>Monitoring Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>