force-app/main/default/objects/Monitoring_Type__c/fields/Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Monitoring__c</fullName>
    <label>Monitoring</label>
    <referenceTo>Monitoring__c</referenceTo>
    <relationshipLabel>Monitoring Types</relationshipLabel>
    <relationshipName>Monitoring_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>