force-app/main/default/objects/Monitoring_Type__c/fields/Next_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Date__c</fullName>
    <label>Next Date</label>
    <type>Date</type>
</CustomField>