force-app/main/default/objects/Monitoring_Type__c/fields/Notify_Before_days__c.field-meta.xml
<CustomField>
    <fullName>Notify_Before_days__c</fullName>
    <label>Notify Before (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>