force-app/main/default/objects/Monitoring_Type__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Periodic KYC Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>