force-app/main/default/objects/Monitoring_Type__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Has not been changed</fullName>
            </value>
            <value>
                <fullName>Has changed</fullName>
            </value>
            <value>
                <fullName>Lower than declared</fullName>
            </value>
            <value>
                <fullName>As expected</fullName>
            </value>
            <value>
                <fullName>Monthly turnover is higher than declared:</fullName>
            </value>
            <value>
                <fullName>Added new</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>