force-app/main/default/objects/Monitoring_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing Dates</fullName>
            </value>
            <value>
                <fullName>Corporate Doc. Update</fullName>
            </value>
            <value>
                <fullName>Government Doc. Update</fullName>
            </value>
            <value>
                <fullName>UBO Passport expiry date</fullName>
            </value>
            <value>
                <fullName>Annual Accounts</fullName>
            </value>
            <value>
                <fullName>AML Watchlists</fullName>
            </value>
            <value>
                <fullName>Power of Attorney expiry date</fullName>
            </value>
            <value>
                <fullName>Trust Agreement expiry date</fullName>
            </value>
            <value>
                <fullName>License expiry date</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Ongoing Monitoring</fullName>
            </value>
            <value>
                <fullName>Business Model</fullName>
            </value>
            <value>
                <fullName>Monthly Turnover volumes</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Directors, Auth.Sign.</fullName>
            </value>
            <value>
                <fullName>UBO</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Financial Accounts</fullName>
            </value>
            <value>
                <fullName>Website Checks</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>AML Risk Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>